Add endpoint for single tribe feedback, and update application deployment documentation
